# weather-forecast-mle

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mlflow  Dockerfile.streamlit  README.md  app.py  config.yaml  docker-compose.yml  main.py  mlflow.db  predictions.csv  pyproject.toml  requirements-pipeline.txt  requirements.txt  run_pipeline.py
.dvc/: config
.github/workflows/: mlops.yml  retrain.yml
airflow/: .env.example  Dockerfile.airflow  README.md  docker-compose.airflow.yml
airflow/dags/: weather_retrain_dag.py  weather_rollback_dag.py
data/: processed.dvc  raw.dvc
data/processed/: eval_encoded.csv  eval_processed.csv  holdout_encoded.csv  holdout_processed.csv  train_encoded.csv  train_processed.csv
data/raw/: eval.csv  holdout.csv  train.csv
models/: best_weather_xgb.pkl  scaler.pkl  tuned_scaler.pkl  weather_model.pkl
notebooks/: 00_data.ipynb  01_preprocess.ipynb  02_feature_engg.ipynb  03_train_validate.ipynb  05_aws.ipynb  05_xgboost.ipynb
pipeline/: deployment_pipeline.py  drift_pipeline.py  inference_pipeline.py  training_pipeline.py
pipelines/feature_pipeline/: feature_engineering.py  load.py  preprocess.py  schemas.py
pipelines/inference_pipeline/: inference.py
pipelines/monitoring_pipeline/: drift.py
pipelines/training_pipeline/: backtest.py  train.py  tune.py
spaces/: README.md
steps/: clean_data.py  custom_deployer.py  data_splitter.py  evaluate_model.py  ingest_data.py  prediction_steps.py  train_model.py
tests/: smoke_test.ipynb  test_feature.py  test_inference.py  test_steps.py  test_train.py
(+6 files in other folders)
