[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-forecast-mle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.40.33",
    "category-encoders>=2.8.1",
    "evidently>=0.7.12",
    "fastapi>=0.116.1",
    "great-expectations==1.5.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.5",
    "mlflow>=3.3.1",
    "nbformat>=5.10.4",
    "numpy==1.26.4",
    "optuna>=4.5.0",
    "pandas==2.1.1",
    "pandera>=0.20",
    "polars>=1.32.3",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "streamlit>=1.48.1",
    "xgboost==3.2.0",
    "joblib (>=1.5.3,<2.0.0)",
]
[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]

# This project is run from the repo root (e.g. `python -m pipelines...`, `pytest`),
# not imported as an installed package. Installing `.` is only used to pull in the
# dependencies above, so we build a metadata-only wheel and skip package discovery
# (which otherwise fails on the many top-level dirs: data/, steps/, models/, ...).
[tool.setuptools]
packages = []

# Tests import `pipelines.*` from the repo root, which isn't an installed package.
# Put the repo root on sys.path so pytest can resolve it (same as `python -m` does).
[tool.pytest.ini_options]
pythonpath = ["."]
